--- a/recipes/recipestyles.css
+++ b/recipes/recipestyles.css
@@ -11,7 +11,7 @@ h1{
 }
 img{
     height: auto;
-    width: 500px;
+    width: 700px;
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -31,8 +31,31 @@ p{
     color:whitesmoke;
     margin-left: 40px;
 }
+ul,ol{
+   
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 25px;
+    color:whitesmoke;
+}
+li{
+    margin-left: 25px;
+    background-color: hsla(17, 92%, 46%, 0.3);
+}
 .border{
     border:4px rgb(173, 192, 214);      
     border-style:groove;
     border-radius: 20px;
 }
+button{
+    background-color:rgba(0, 0, 0, 0.3);
+    color: yellow;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 20px;
+}
+button:hover{
+    background-color:rgb(0, 0, 0);
+    color: whitesmoke;
+}
+a{text-align: center;}
