--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,12 @@
 body{
     background-image: url("./images/background.jpg");
-    
-    background-size: 100%;
 }
 h1{
     font-family:'Times New Roman', Times, serif;
     font-size: 60px;
     font-weight: 900;
     background-color: hsla(271, 85%, 80%, 0.3);
-    color: rgb(124, 14, 0);
+    color: rgb(255, 255, 255);
     text-align: center;
 }
 .image{
@@ -17,7 +15,7 @@ h1{
     display: block;
     margin-left: 15px;
     margin-right: auto;
-    border-radius: 15px;
+    border-radius: 40px;
     float:left;
   
 }
@@ -27,7 +25,7 @@ h1{
     margin-left: 100px;
 }
 .btn{
-    background-color:rgba(0, 0, 0, 0.5);
+    background-color:rgba(0, 0, 0, 0.3);
     color: yellow;
     font-family: 'Courier New', Courier, monospace;
     font-size: 30px;
@@ -37,6 +35,7 @@ h1{
 }
 .btn:hover{
     background-color:rgb(0, 0, 0);
+    color: whitesmoke;
 }
 /*.border{
     border:4px rgb(173, 192, 214);
