--- a/recipes/recipestyles.css
+++ b/recipes/recipestyles.css
@@ -50,12 +50,35 @@ button{
     background-color:rgba(0, 0, 0, 0.3);
     color: yellow;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
     border-radius: 20px;
 }
 button:hover{
+    animation-name: colors;
+    animation-duration: 700ms;
+    animation-fill-mode: forwards;
+    
+   
+}
+  
+
+  @keyframes colors {
+    100% {
+      
     background-color:rgb(0, 0, 0);
     color: whitesmoke;
+    font-size:130%;
+    }
+}   
+    
+.but1pos{
+    position:fixed;
+    top:45px;
+    right:10px;
 }
-a{text-align: center;}
+.but2pos{
+    position:fixed;
+    top:10px;
+    right:10px;
+}
