--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,20 @@ h1{
 
 }
 .btn:hover{
+    animation-name: buthover;
+    animation-duration: 700ms;
+    animation-fill-mode: forwards;  
+}
+  
+
+  @keyframes buthover {
+    100% {
+      
     background-color:rgb(0, 0, 0);
     color: whitesmoke;
-}
+    font-size: 220%;
+    }
+}   
 /*.border{
     border:4px rgb(173, 192, 214);
     border-style:groove;
