delete index picture and add button pictures

--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,17 @@ h1{
 }
 .image{
     height: auto;
-    width: 300px;
+    width: 70px;
     display: block;
     margin-left: 15px;
     margin-right: auto;
-    border-radius: 40px;
+    border-radius: 5px;
     float:left;
   
 }
 .buttons{
    
-    text-align: left;
-    margin-left: 100px;
+    text-align: center;
 }
 .btn{
     background-color:rgba(0, 0, 0, 0.3);
@@ -41,12 +40,15 @@ h1{
   
 
   @keyframes buthover {
+    
     100% {
       
-    background-color:rgb(0, 0, 0);
-    color: whitesmoke;
-    font-size: 220%;
-    }
+        background-color:rgb(0, 0, 0);
+        color: whitesmoke;
+        /*font-size: 220%;*/
+        transform: scale(2)
+        
+        }
 }   
 /*.border{
     border:4px rgb(173, 192, 214);
