--- a/recipes/recipestyles.css
+++ b/recipes/recipestyles.css
@@ -38,7 +38,7 @@ ul,ol{
     color:whitesmoke;
 }
 li{
-    margin-left: 25px;
+    margin-left: 30px;
     background-color: hsla(17, 92%, 46%, 0.3);
 }
 .border{
@@ -55,7 +55,7 @@ button{
     border-radius: 20px;
 }
 button:hover{
-    animation-name: colors;
+    animation-name: buthover;
     animation-duration: 700ms;
     animation-fill-mode: forwards;
     
@@ -63,7 +63,7 @@ button:hover{
 }
   
 
-  @keyframes colors {
+  @keyframes buthover {
     100% {
       
     background-color:rgb(0, 0, 0);
