--- a/recipes/recipestyles.css
+++ b/recipes/recipestyles.css
@@ -38,7 +38,7 @@ ul,ol{
     color:whitesmoke;
 }
 li{
-    margin-left: 30px;
+    margin-left: 25px;
     background-color: hsla(17, 92%, 46%, 0.3);
 }
 .border{
@@ -47,12 +47,13 @@ li{
     border-radius: 20px;
 }
 button{
+    margin-right: 10px;
     background-color:rgba(0, 0, 0, 0.3);
-    color: yellow;
+    color: rgba(255, 255, 0, 0.7);
     font-family: 'Courier New', Courier, monospace;
-    font-size: 15px;
+    font-size: 25px;
     font-weight: bold;
-    border-radius: 20px;
+    border-radius: 5px;
 }
 button:hover{
     animation-name: buthover;
@@ -68,17 +69,20 @@ button:hover{
       
     background-color:rgb(0, 0, 0);
     color: whitesmoke;
-    font-size:130%;
+    /*font-size:130%;*/
+    transform:scale(1.3);
     }
 }   
     
 .but1pos{
-    position:fixed;
-    top:45px;
-    right:10px;
-}
-.but2pos{
+    text-align: right;
     position:fixed;
     top:10px;
-    right:10px;
+    right:20px;
+}
+.but2pos{
+    text-align: right;
+    position:fixed;
+    top:50px;
+    right:20px;
 }
