--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,16 @@ body{
 }
 h1{
     font-family:'Times New Roman', Times, serif;
-    font-size: 60px;
+    font-size: 80px;
     font-weight: 900;
     background-color: hsla(271, 85%, 80%, 0.3);
     color: rgb(255, 255, 255);
     text-align: center;
 }
+
 .image{
     height: auto;
-    width: 70px;
+    width: 120px;
     display: block;
     margin-left: 15px;
     margin-right: auto;
@@ -20,21 +21,21 @@ h1{
   
 }
 .buttons{
-   
-    text-align: center;
+    margin-left: 200px;
+    text-align: left;
 }
 .btn{
     background-color:rgba(0, 0, 0, 0.3);
     color: yellow;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 30px;
+    font-size: 50px;
     font-weight: bold;
     border-radius: 20px;
 
 }
 .btn:hover{
     animation-name: buthover;
-    animation-duration: 700ms;
+    animation-duration: 500ms;
     animation-fill-mode: forwards;  
 }
   
@@ -46,7 +47,7 @@ h1{
         background-color:rgb(0, 0, 0);
         color: whitesmoke;
         /*font-size: 220%;*/
-        transform: scale(2)
+        transform: scale(1.3);
         
         }
 }   
