--- a/recipes/recipestyles.css
+++ b/recipes/recipestyles.css
@@ -1,4 +1,6 @@
 body{
+    padding: 0;
+    margin: 0;
     background-image: url("../images/background.jpg");
 }
 img{
@@ -10,25 +12,29 @@ img{
     border-radius: 15px;
 }
 h1{
-    font-size: 60px;
-    font-weight: 900;  
+    margin-top: 0;
+    font-size: 50px;
 }
 
 h2{   
-    font-size: 40px;
-    font-weight: 700;
+    font-size: 35px;
 }
 h1,h2{
-    font-family:'Times New Roman', Times, serif;
-    background-color: hsla(271, 85%, 80%, 0.3);
-    color: rgb(255, 255, 255);
+    font-family:'Luckiest Guy', Times, serif;
+    padding-top: 20px;
+
+    background-image: linear-gradient(to right,rgba(28,28,48,0), rgba(0, 0, 0, 0.3), rgba(28,28,48,0));      
+    color: rgb(255, 255, 193);
     text-align: center;
 }
-p{
-    margin-left: 40px;
+p{  
+    font-family: "Indie Flower", serif;
+    text-align: center;
+    font-size: 30px;
+    color:whitesmoke;
 }
-ul,ol,p{  
-    font-family: 'Courier New', Courier, monospace;
+ul,ol{  
+    font-family: "Secular One", monospace;
     font-size: 25px;
     color:whitesmoke;
 }
@@ -45,8 +51,8 @@ li{
 button{
     margin-right: 10px;
     background-color:rgba(0, 0, 0, 0.3);
-    color: rgba(255, 255, 0, 0.7);
-    font-family: 'Courier New', Courier, monospace;
+    color: rgb(184, 184, 118);
+    font-family: "Indie flower", monospace;
     font-size: 25px;
     font-weight: bold;
     border-radius: 5px;
@@ -70,10 +76,27 @@ button:hover{
     top:10px;  
 }
 .but2pos{   
-    top:50px; 
+    top:60px; 
 }
 .but1pos,.but2pos{
     text-align: right;
     position:fixed;
     right:20px;
+}
+.buttons{
+    display: flex;
+    justify-content: start;
+    gap:20px;
+}
+.footer{
+    font-family: 'Rock Salt', sans-serif;  
+    margin:0;
+    padding:3px 0px;
+    background-image: linear-gradient(to right,rgba(28,28,48,0), rgba(0, 0, 0, 0.3), rgba(28,28,48,0));      
+    font-size:0.7rem;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: rgb(255, 255, 255);
 }
