--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,46 @@
 body{
     background-image: url("./images/background.jpg");
+    margin:0;
+    padding: 0;
 }
-h1{
-    font-family:'Times New Roman', Times, serif;
-    font-size: 80px;
-    font-weight: 900;
-    background-color: hsla(271, 85%, 80%, 0.3);
-    color: rgb(255, 255, 255);
+h1{ 
+    margin-top: 0;
+    font-family:'Luckiest Guy', Times, serif;
+    font-size: 60px;
     text-align: center;
+    background-image: linear-gradient(to right,rgba(28,28,48,0), rgba(0, 0, 0, 0.3), rgba(28,28,48,0));      
+    color: rgb(255, 255, 193);
+    padding-top: 20px;
 }
 
 .image{
-    height: auto;
-    width: 120px;
-    display: block;
-    margin-left: 15px;
-    margin-right: auto;
-    border-radius: 5px;
-    float:left;
+    height: 80px;
+    width: 130px;
+    border-radius: 18px;
+    margin: 0;
+    padding: 0;
+    
   
 }
 .buttons{
-    margin-left: 200px;
-    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    
+    
 }
 .btn{
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 0px;
+    padding-right: 20px;
     background-color:rgba(0, 0, 0, 0.3);
-    color: yellow;
-    font-family: 'Courier New', Courier, monospace;
+    color: rgb(184, 184, 118);
+    font-family: "Indie flower", monospace;
     font-size: 50px;
     font-weight: bold;
     border-radius: 20px;
@@ -35,7 +48,7 @@ h1{
 }
 .btn:hover{
     animation-name: buthover;
-    animation-duration: 500ms;
+    animation-duration: 400ms;
     animation-fill-mode: forwards;  
 }
   
@@ -51,6 +64,22 @@ h1{
         
         }
 }   
+a{
+    text-decoration: none; 
+}
+.footer{
+    font-family: 'Rock Salt', sans-serif;  
+    margin:0;
+    padding:3px 0px;
+    background-image: linear-gradient(to right,rgba(28,28,48,0), rgba(0, 0, 0, 0.3), rgba(28,28,48,0));      
+    font-size:0.8rem;
+    position:fixed;
+    text-align: center;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    color: rgb(255, 255, 255);
+}
 /*.border{
     border:4px rgb(173, 192, 214);
     border-style:groove;
