--- a/recipes/recipestyles.css
+++ b/recipes/recipestyles.css
@@ -4,9 +4,10 @@ body{
     
     padding: 0;
     margin: 0;
-    background-image: url("../images/background.jpg");
+    background-color: black;
 }
 img{
+    outline: 5px solid rgba(6, 18, 177, 0.575);
     height: auto;
   
     display: block;
@@ -26,7 +27,7 @@ h1,h2{
     font-family:'Luckiest Guy', Times, serif;
     padding-top: 20px;
 
-    background-image: linear-gradient(to right,rgba(28,28,48,0), rgba(0, 0, 0, 0.3), rgba(28,28,48,0));      
+    background-image: linear-gradient(to right,rgba(255, 255, 255, 0), rgba(6, 18, 177, 0.575), rgba(255, 255, 255, 0));      
     color: rgb(255, 255, 193);
     text-align: center;
 }
@@ -40,7 +41,7 @@ p{
 h1,h2,p,ul,ol,img{
     margin-left: auto;
     margin-right: auto;
-    width: min(75ch, 50%);
+    width: min(75ch, 60%);
 }
 ul,ol{
     
@@ -56,7 +57,7 @@ ul,ol{
 li{ 
     padding-left: 1rem;
     padding-right: 1rem;
-    background-color: hsla(17, 92%, 46%, 0.3);
+    background-color: hsla(0, 0%, 34%, 0.3);
     border-radius: 20px;
 }
 .border{
@@ -76,13 +77,13 @@ button{
 button:hover{
     cursor: pointer;
     animation-name: buthover;
-    animation-duration: 700ms;
+    animation-duration: 200ms;
     animation-fill-mode: forwards;   
 }
 
   @keyframes buthover {
     100% {    
-    background-color:rgb(0, 0, 0);
+    background-color:rgba(6, 18, 177, 0.575);
     color: whitesmoke;
     /*font-size:130%;*/
     transform:scale(1.3);
@@ -116,4 +117,14 @@ button:hover{
     left: 0;
     right: 0;
     color: rgb(255, 255, 255);
+}
+
+@media only screen and (max-width: 800px) {
+    .button, .but1pos, .but2pos{
+       opacity: 0;   
+    }
+    h1,h2,p,ul,ol,img{
+      
+        width: min(75ch, 90%);
+    }
 }
