--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("./images/background.jpg");
+    background-color: black;
     margin:0;
     padding: 0;
 }
@@ -8,7 +8,7 @@ h1{
     font-family:'Luckiest Guy', Times, serif;
     font-size: 60px;
     text-align: center;
-    background-image: linear-gradient(to right,rgba(28,28,48,0), rgba(0, 0, 0, 0.3), rgba(28,28,48,0));      
+    background-image: linear-gradient(to right,rgba(255, 255, 255, 0), rgba(6, 18, 177, 0.575), rgba(255, 255, 255, 0));      
     color: rgb(255, 255, 193);
     padding-top: 20px;
 }
@@ -48,7 +48,7 @@ h1{
 }
 .btn:hover{
     animation-name: buthover;
-    animation-duration: 400ms;
+    animation-duration: 200ms;
     animation-fill-mode: forwards;  
 }
   
@@ -57,7 +57,7 @@ h1{
     
     100% {
       
-        background-color:rgb(0, 0, 0);
+        background-color:rgba(6, 18, 177, 0.575);
         color: whitesmoke;
         /*font-size: 220%;*/
         transform: scale(1.3);
@@ -73,9 +73,9 @@ a{
     padding:3px 0px;
     background-image: linear-gradient(to right,rgba(28,28,48,0), rgba(0, 0, 0, 0.3), rgba(28,28,48,0));      
     font-size:0.8rem;
-    position:fixed;
+    position:relative;
     text-align: center;
-    bottom: 0;
+    bottom: -10vw;
     left: 0;
     right: 0;
     color: rgb(255, 255, 255);
@@ -85,3 +85,6 @@ a{
     border-style:groove;
     border-radius: 20px;
 }*/
+
+
+
